--- a/password_chekcer/style.css
+++ b/password_chekcer/style.css
@@ -3,3 +3,55 @@
   margin: 0;
   box-sizing: border-box;
 }
+body { 
+  margin: 0; 
+  font-family: monospace; 
+  min-height: 100vh; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  background-image: linear-gradient(to top right, 
+          #7abb76, #cfd2d8); 
+  color: #0e0f0f; 
+  font-size: 20px; 
+} 
+
+#top { 
+  color: green; 
+} 
+
+.main-box { 
+  width: auto; 
+  text-align: center; 
+} 
+
+.main-box label { 
+  display: block; 
+  padding: 20px 0; 
+} 
+
+.main-box input { 
+  border: none; 
+  outline: none; 
+  padding: 20px; 
+  width: calc(100% - 40px); 
+  border-radius: 10px; 
+  background-color: #eaeff2; 
+  color: #3ba62f; 
+  font-size: 20px; 
+} 
+
+.main-box .power-container { 
+  background-color: #2E424D; 
+  width: 100%; 
+  height: 15px; 
+  border-radius: 5px; 
+} 
+
+.main-box .power-container #power-point { 
+  background-color: #D73F40; 
+  width: 1%; 
+  height: 100%; 
+  border-radius: 5px; 
+  transition: 0.5s; 
+}
